syntax = "proto3";

option csharp_namespace = "ECommerce.Customers.Api.Protos";

package CustomerApi;

service CustomerService {
	rpc CreateCustomer(CreateUserRequest) returns(CreateUserResponse);
	rpc GetCustomer(GetUserRequest) returns (GetUserResponse);
}

message CreateUserRequest {
	string id = 1;
	string firstname = 2;
    string lastname = 3;
    Document document = 4;
    Email email = 5;
    Phone phone = 6;
    Address address = 7;
}

message CreateUserResponse {
    bool isvalid = 1;
    string message = 2;
}

message GetUserRequest {
	string id = 1;
}

message GetUserResponse {
	User user = 1;
}

message User {
	string id = 1;
	string firstname = 2;
    string lastname = 3;
	Document document = 4;
    Email email = 5;
    Phone phone = 6;
    Address address = 7;
}

message Document {
	string id = 1;
	string number = 2;
    string userid = 3;
}

message Email {
	string id = 1;
	string address = 2;
    string userid = 3;
}

message Phone {
	string id = 1;
	string number = 2;
    string userid = 3;
}

message Address {
	string id = 1;
	string firstline = 2;
    string secondline = 3;
    string city = 4;
    string state = 5;
    string zipcode = 6;
    string userid = 7;
}
